WIP tdf#89609 Ignore subsecond precision in iso8601

Explorer shell extension fails to convert date
into locale specific string if it has sub-second
precision.

Change-Id: I11bd38fc2876aa1f8235dbfb8c7850ff22ac2a8b
Reviewed-on: https://gerrit.libreoffice.org/24220
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>