shell/inc/iso8601_converter.hxx
@@ -25,7 +25,8 @@
 
 /* Converts ISO 8601 conform date/time
    represenation to the representation
-   conforming to the current locale
+   conforming to the current locale,
+   ignoring the milliseconds part if exists
 */
 std::wstring iso8601_date_to_local_date(const std::wstring& iso8601date);
 
